@@ -1,3 +1,7 @@
+2011-11-09  Xavier Perseguers  <xavier@typo3.org>
+
+	* [BUGFIX] #31703: Default (English) labels are not missing
+
 2011-11-08  Xavier Perseguers  <xavier@typo3.org>
 
 	* [TASK] #31668: Allow to suggest 'xliff' instead of requiring it
